# CSE230-Project

./: .gitignore  README.md  snake-cse.cabal  stack.yaml
src/: Snake.hs  UI.hs
test/: FoodTest.hs  SnakeTest.hs  Spec.hs
